--- a/syele.css
+++ b/syele.css
@@ -28,3 +28,16 @@ button {
 .passo.ativo {
     display:block;
 }
+
+
+
+main {
+    text-align: center;
+    max-width: 90%;
+}
+
+
+
+img {
+    max-width: 90%;
+}
